finished my first ever website

--- a/index.html
+++ b/index.html
@@ -36,23 +36,22 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/zahidul-hussen-778089174/">DOWNLOAD RESUME</a>
     </div>
     </section>
-    <section class="experienc-area">
+    <section class="experience-area">
         <h2>Experiences</h2>
-        <div class="half-width">
+        <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Dev</h2>
             <h3 class="orange-highlight">2021 - Present  | Pro level Web Dev</h3>
             <p>I am the master of HTML,CSS and Javascript. I know everything needed to make a website function efficient. I didn't stop with the web.I want beyond with most popular Javascript framework called Vue,Js.I even know the development server and security. I will give you 100% web solution</p>
         </div>
-        <div>
+        <div id="baby-web" class="half-width single-experience" >
             <h2>Baby Web Developer</h2>
             <h3 class="orange-highlight">2020-21 | Programming Hero Learner</h3>
             <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it.And uploaded the content. It was fun working at programming Hero.</p>
         </div>
-        <div class="half-width">
-
-        </div>
-
-    </section>
+        </section>
+        <footer>
+            <p>© Zahidul Hussen 2021, all rights reserved.</p>
+        </footer>
 
 </body>
 </html>
